added a sick pic of joey and some lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	
+	<img src="images/joey.jpg">
+	<div>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quibusdam aliquid perferendis hic adipisci iusto assumenda officia culpa in cum repudiandae eveniet quisquam, dicta ullam suscipit qui harum rem cumque.
+	</div>
 </body>
 </html>
